# tabi-studios-webapp

./: .gitignore  Home.py  README.md  pyproject.toml  settings.py
assets/: invoice_template.html  quotation_template.html
pages/: 2_Quotation.py  3_Invoice.py  4_Status_Update.py  5_Projects.py
src/: dashboard.py  database.py  send_email.py  ui.py  utils.py  validations.py
